<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv</name>
  <version>0.0.1</version>
  <description>Environment detection package for ROS 2.</description>
  
  <maintainer email="karaaslanender1@gmail.com">Ender Karaaslan</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>opencv</depend>
  <depend>cv_bridge</depend>
  <depend>my_robot_interfaces</depend>
  <depend>geometry_msgs</depend>


  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Exported build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
